--- a/layouts/all.html
+++ b/layouts/all.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>{{ .Site.Title }}</title>
-	{{ block "style" . }} {{ end }}
+	<link rel="stylesheet" href="/style.css">
 </head>
 <body>
 	<header>{{ block "header" . }} {{ end }}</header>
