--- a/layouts/list.html
+++ b/layouts/list.html
@@ -2,7 +2,7 @@
 <ul>
 	{{ range .Pages }}
 	<li>
-		<a class="title" href="{{ .Permalink }}">{{ .Title }}</a>
+		<a class="title" href="{{ .RelPermalink }}">{{ .Title }}</a>
 	</li>
 	{{ end }}
 </ul>
