--- a/layouts/home.html
+++ b/layouts/home.html
@@ -1,2 +1,15 @@
 {{ define "pagenav" }}
+{{ with .Sections }}
+<hr>
+{{ range . }}
+<h2>{{ .Name }}</h2>
+<ol class="nav">
+	{{ range .Pages }}
+	<li>
+		<a href="{{ .RelPermalink }}">{{ .Title }}</a>
+	</li>
+	{{ end }}
+</ol>
+{{ end }}
+{{ end }}
 {{ end }}
