--- a/static/style.css
+++ b/static/style.css
@@ -52,23 +52,18 @@ header a:hover {
 	text-decoration-line: underline;
 }
 header a.title {
-	font-size: 1.8em;
+	font-size: 1.6em;
 	font-weight: bold;
 }
 header nav {
 	color: gray;
 	font-size: .9em;
 }
-header nav ul {
+header .nav {
 	display: flex;
 	flex-direction: row;
 	gap: 1em;
 	justify-content: center;
-	margin: 0;
-	padding: 0;
-}
-header nav ul li {
-	list-style-type:none;
 }
 
 /* ------------------------------------
@@ -87,17 +82,42 @@ footer {
 	color: gray;
 	font-size: .9em;
 }
-footer ul {
-	margin: 0;
-	padding: 0;
+footer .nav {
 	font-size: .9em;
 	display: flex;
 	flex-direction: row;
 	gap: 8px;
 }
-footer ul li {
+
+/* ------------------------------------
+* general navigation
+* ---------------------------------- */
+
+@counter-style nav-entry {
+  system: numeric;
+  symbols: "0" "1" "2" "4" "5" "6" "7" "8" "9";
+  prefix: "#";
+  suffix: "  ";
+}
+.nav a:not(:hover) {
+	text-decoration-line: none;
+}
+ul.nav {
+	margin: 0;
+	padding: 0;
+}
+ul.nav li {
 	list-style-type:none;
 }
-footer a:not(:hover) {
-	text-decoration-line: none;
+ol.nav {
+	margin-left: 0;
+	padding-inline: 0;
+    list-style-position: outside;
+}
+ol.nav li {
+	list-style: nav-entry;
+}
+ol.nav li::marker {
+	color: gray;
+	font-family: monospace;
 }
