--- a/layouts/baseof.html
+++ b/layouts/baseof.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>{{ .Site.Title }}</title>
-	<link rel="stylesheet" href="/style.css">
+	{{ block "style" . }} {{ end }}
 </head>
 <body>
 	<header>{{ block "header" . }} {{ end }}</header>
@@ -59,5 +59,17 @@
 	<li><a href="{{ .url }}">{{ .label }}</a></li>
 	{{ end }}
 </ul>
+{{ end }}
+{{ end }}
+
+{{ define "style" }}
+{{ with ( resources.Get "css/style.css" ) }}
+{{ if hugo.IsDevelopment }}
+<link rel="stylesheet" href="{{ .RelPermalink }}">
+{{ else }}
+{{ with . | minify | fingerprint }}
+<link rel="stylesheet" href="{{ .RelPermalink }}" integrity="{{ .Data.Integrity }}" crossorigin="anonymous">
+{{ end }}
+{{ end }}
 {{ end }}
 {{ end }}
