--- a/layouts/baseof.html
+++ b/layouts/baseof.html
@@ -63,6 +63,11 @@
 {{ end }}
 
 {{ define "style" }}
+{{/*Establish early connection(s) with the third-party origin*/}}
+{{/*for fater resources deliveries*/}}
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 {{ with ( resources.Get "css/style.css" ) }}
 {{ if hugo.IsDevelopment }}
 <link rel="stylesheet" href="{{ .RelPermalink }}">
