Make sure images fit within content width

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -119,3 +119,11 @@ ol.nav li {
 ol.nav li::marker {
 	font-family: monospace;
 }
+
+/* ------------------------------------
+* images
+* ---------------------------------- */
+
+img {
+	max-width: 100%;
+}
