--- a/layouts/single.html
+++ b/layouts/single.html
@@ -1,2 +1,9 @@
 {{ define "pagenav" }}
 {{ end }}
+
+{{ define "toc" }}
+<div class="toc">
+	<h2 class="toclabel">Table of Contents</h2>
+	{{ .TableOfContents }}
+</div>
+{{ end }}
