--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,30 +1,149 @@
-body {
-	font-family:'Inter', sans-serif;
-	font-optical-sizing: auto;
-	line-height:1.6;
-	max-width:720px;/*narrow column makes reading more comfortable*/
-	margin:5vw auto;
-	padding: 0 1em;
-	color: rgb(72, 72, 72);
+/* ----------------------------------------------------------
+ * @property at-rule
+ * https://developer.mozilla.org/en-US/docs/Web/CSS/@property
+ * ------------------------------------------------------- */
+
+@property --pen-regular {
+  syntax: "<color>";
+  inherits: true;
+  initial-value: black;
+}
+@property --pen-href {
+  syntax: "<color>";
+  inherits: true;
+  initial-value: #009d00;
 }
 
 /* ------------------------------------
-* hyperlinks
+* Page-wise
 * ---------------------------------- */
 
-a {
-	color: inherit;
-	text-decoration-color: #e3e3e3;
-	text-decoration-thickness: 3px;
-	text-underline-offset: 2px;
-	text-decoration-skip-ink: none;
+body {
+	font-family: 'Vollkorn', serif;
+	font-size: 1.1em;
+	color: var(--pen-regular);
 }
 
-a:hover{
-	color: black;
-	text-decoration-color: lime;
+header {
+	border-bottom: 1px solid #eee;
 }
-/* --------------------------------- */
+
+main {
+	margin: auto;
+	margin-block: 40px;
+}
+
+footer {
+	border-top: 2px dotted #b4b4b4;
+	margin: auto;
+}
+@media only screen and (min-width: 840px) {
+	main,footer,.inheader {
+		max-width: 840px;
+	}
+}
+
+/* ------------------------------------
+* Within header
+* ---------------------------------- */
+
+.inheader {
+	min-height: 70px;
+	max-width: 840px;
+	display: flex;
+	column-gap: 1em;
+	align-items: center;
+	margin: auto;
+	flex-wrap: wrap;
+}
+.sitetitle {
+	font-size: 1.5em;
+	text-wrap: nowrap;
+	height: fit-content;
+}
+.menu {
+	display: inline-flex;
+	list-style: none;
+	padding-inline-start: 0;
+	gap: 1em;
+	flex-wrap: wrap;
+	margin-block: 0;
+}
+
+/* ------------------------------------
+* Within footer
+* ---------------------------------- */
+
+footer {
+	font-size: .9em;
+}
+footer .contact {
+	list-style: none;
+	padding: 0;
+	gap: 8px;
+	display: inline-flex;
+	margin-block: .1em;
+}
+
+/* ------------------------------------
+* Within main
+* ---------------------------------- */
+
+.heading {
+	font-weight: bold;
+	font-size: 3em;
+	margin-block: 0 .67em;
+}
+.content {
+	line-height: 1.6;
+}
+@media only screen and (min-width: 840px) {
+	.article {
+		display: grid;
+		grid-template-areas: "h h" "c s";
+		grid-template-columns: 600px 240px;
+		column-gap: 40px;
+	}
+	.heading {
+		grid-area: h;
+	}
+	.content {
+		grid-area: c;
+	}
+	aside {
+		grid-area: s;
+	}
+}
+.toclabel{
+	font-size: unset;
+	margin-block: .67em;
+	border-bottom: 1px solid #eee;
+}
+.toc ul {
+	list-style: none;
+	padding-inline: 20px;
+	margin-block: 4px;
+	font-size: .9em;
+}
+.toc nav>ul {
+	padding-inline: 0;
+}
+
+/* Section navigation */
+.pagenav {
+	list-style: none;
+	padding-inline: 0;
+}
+.pagenavitem {
+	margin: .67em 0;
+}
+.pagenavtitle {
+	font-size: 1.3em;
+}
+
+/* ------------------------------------
+* General elements
+* ---------------------------------- */
 
 hr {
 	background:#eee;
@@ -32,98 +151,53 @@ hr {
 	height:1px;
 	border: none;
 }
-
-/* ------------------------------------
-* header
-* ---------------------------------- */
-
-header {
-	text-align:center;
-	line-height: normal;
-	margin: 0;
-	padding: 0;
-}
-header a {
-	text-decoration-line: none;
-}
-header a:hover {
-	text-decoration-line: underline;
-}
-header a.title {
-	font-size: 1.6em;
-	font-weight: bold;
-}
-header nav {
-	font-size: .9em;
-}
-header .nav {
-	display: flex;
-	flex-direction: row;
-	gap: 1em;
-	justify-content: center;
-}
-
-/* ------------------------------------
-* main
-* ---------------------------------- */
-
-main {
-	margin-block-end: 80px;/*make a considerable gap between it and footer*/
-}
-
-/* ------------------------------------
-* footer
-* ---------------------------------- */
-
-footer {
-	font-size: .9em;
-	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
-}
-footer .nav {
-	font-size: .9em;
-	display: flex;
-	flex-direction: row;
-	gap: 8px;
-}
-
-/* ------------------------------------
-* general navigation
-* ---------------------------------- */
-
-@counter-style nav-entry {
-  system: numeric;
-  symbols: "0" "1" "2" "4" "5" "6" "7" "8" "9";
-  prefix: "#";
-  suffix: "  ";
-}
-.nav a:not(:hover) {
-	text-decoration-line: none;
-}
-ul.nav {
-	margin: 0;
-	padding: 0;
-}
-ul.nav li {
-	list-style-type:none;
-}
-ol.nav {
-	margin-left: 0;
-	padding-inline: 0;
-    list-style-position: outside;
-}
-ol.nav li {
-	list-style: nav-entry;
-}
-ol.nav li::marker {
-	font-family: monospace;
-}
-
-/* ------------------------------------
-* images
-* ---------------------------------- */
-
 img {
 	max-width: 100%;
+}
+/* Hyperlink */
+a {
+	text-underline-offset: 2px;
+}
+a:hover {
+	color: var(--pen-href);
+}
+a:focus {
+	text-decoration: none;
+}
+.content a {
+	font-weight: 600;
+	color: var(--pen-href);
+}
+.toc a{
+	color: inherit;
+	text-decoration: none;
+	&:hover{
+		color: var(--pen-href);
+	}
+}
+header a,footer a{
+	color: inherit;
+	text-decoration: none;
+	&:hover{
+		text-decoration-line: underline;
+	}
+}
+.sitetitle {
+	color: var(--pen-href);
+	&:hover {
+		text-decoration: none;
+	}
+}
+/* Codeblock */
+pre {
+	padding: .5em;
+	overflow: scroll;
+	background: #eee;
+	border: 4px solid #e3e3e3;
+	border-radius: 4px;
+}
+pre code {
+	font-family: 'Inconsolata', monospace;
+	font-weight: bold;
+	font-size: .8em;
 }
