Make font downloads independent of style.css

--- a/layouts/baseof.html
+++ b/layouts/baseof.html
@@ -56,11 +56,7 @@
 {{ end }}
 
 {{ define "style" }}
-{{/*Establish early connection(s) with the third-party origin*/}}
-{{/*for fater resources deliveries*/}}
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&family=Vollkorn:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+{{ partial "fonts.html" . }}
 {{ with ( resources.Get "css/style.css" ) }}
 {{ if hugo.IsDevelopment }}
 <link rel="stylesheet" href="{{ .RelPermalink }}">
