--- a/layouts/baseof.html
+++ b/layouts/baseof.html
@@ -16,7 +16,7 @@
 
 {{ define "header" }}
 <div class="inheader">
-<a class="sitetitle" href="/">{{ .Site.Title }}</a>
+<a href="/">Home</a>
 <nav>{{ block "menu" site.Menus.main }} {{ end }}</nav>
 </div>
 {{ end }}
