--- a/layouts/partials/fonts.html
+++ b/layouts/partials/fonts.html
@@ -2,10 +2,10 @@
 {{/*for fater resources deliveries*/}}
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&family=Vollkorn:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900" rel="stylesheet">
 <style>
 body {
-	font-family: 'Vollkorn', serif;
+	font-family: Palatino, 'Palatino Linotype', 'URW Palladio L', 'P052', serif;
 	font-size: 1.1em;
 }
 code {
