Page previous/next

--- a/layouts/baseof.html
+++ b/layouts/baseof.html
@@ -38,12 +38,13 @@
 {{ define "main" }}
 <article class="article">
 <h1 class="heading">{{ .Title }}</h1>
-<aside>
+<aside class="articleside">
 	{{ block "toc" . }} {{ end }}
 </aside>
 <div class="content">
 {{ .Content }}
 </div>
+{{ block "pagenav" . }} {{ end }}
 </article>
 {{ end }}
 
