--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,7 +102,7 @@ footer .contact li {
 	.content {
 		grid-area: c;
 	}
-	aside {
+	.articleside {
 		display: block;
 		grid-area: s;
 	}
@@ -211,4 +211,31 @@ p {
 	margin-block: 0;
 	font-size: 1.2em;
 	font-weight: bold;
+}
+
+/* ------------------------------------
+* article prev/next
+* ---------------------------------- */
+
+.prevnext {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	margin: 100px 0 0 0;
+	font-size: .9em;
+	gap: 1em;
+}
+.prevnextlabel {
+	margin-block: 0;
+	color: #767676;
+}
+.prevnext a {
+	color: inherit;
+	text-decoration: none;
+}
+.prev {
+	text-align: left;
+}
+.next {
+	text-align: right;
 }
