--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,12 +6,22 @@
 @property --pen-regular {
   syntax: "<color>";
   inherits: true;
-  initial-value: rgb(64, 64, 64);
+  initial-value: rgb(42, 42, 42);
 }
-@property --pen-href {
+@property --marker-green {
   syntax: "<color>";
   inherits: true;
   initial-value: rgb(202, 246, 125);
+}
+@property --marker-pink {
+  syntax: "<color>";
+  inherits: true;
+  initial-value: rgb(255, 190, 230);
+}
+@property --marker-orange {
+  syntax: "<color>";
+  inherits: true;
+  initial-value: rgb(255, 185, 163);
 }
 
 /* ------------------------------------
@@ -28,7 +38,7 @@ header {
 
 main {
 	margin: auto;
-	margin-block: 100px;
+	margin-block: 100px 20px;
 }
 
 footer {
@@ -71,6 +81,7 @@ footer {
 }
 footer .contact {
 	padding-inline: 0;
+	margin-block: 20px 4px;
 }
 footer .contact li {
 	display: inline;
@@ -145,7 +156,10 @@ footer .contact li {
 /* ------------------------------------
 * General elements
 * ---------------------------------- */
-
+em {
+	background-color: var(--marker-orange);
+	color: black;
+}
 hr {
 	background:#eee;
 	margin-block: 2rem;
@@ -155,18 +169,24 @@ hr {
 img {
 	max-width: 100%;
 }
+h2 {
+	margin-block: 2em .67em;
+}
+p {
+	margin-bottom: 1.7em;
+}
 /* Hyperlink */
 a {
 	color: inherit;
 	text-underline-offset: 2px;
 	text-decoration-thickness: 4px;
-	text-decoration-color: var(--pen-href);
+	text-decoration-color: var(--marker-green);
 	text-decoration-skip-ink: none;
 }
 a:focus,a:hover,a:active {
 	color: black;
 	text-decoration: none;
-	background: var(--pen-href);
+	background: var(--marker-green);
 }
 .content a {
 	font-weight: 600;
@@ -178,23 +198,18 @@ header a,footer a,.toc a{
 
 /* Codeblock */
 pre {
-	padding: .5em;
+	padding: 24px;
 	overflow: scroll;
-	background: #eee;
-	border: 4px solid #e3e3e3;
-	border-radius: 4px;
+	background: #f7f7f7;
+	border: 2px solid #e3e3e3;
 }
-pre code {
-	font-weight: bold;
-	font-size: .8em;
+code {
+	font-size: 13px;
+	color: black;
 }
-h2 {
-	margin-block: 2em .67em;
+p>code {
+	background-color: var(--marker-pink);
 }
-p {
-	margin-bottom: 1.7em;
-}
-
 /* ------------------------------------
 * callouts
 * ---------------------------------- */
