Make it more compact

--- a/layouts/list.html
+++ b/layouts/list.html
@@ -9,7 +9,7 @@
 {{ end }}
 
 {{ define "main" }}
-<div class="article">
+<div>
 <h1 class="heading">{{ .Title }}</h1>
 <div class="content">
 {{ block "pagenav" . }} {{ end }}
