--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@
 @property --pen-regular {
   syntax: "<color>";
   inherits: true;
-  initial-value: rgb(42, 42, 42);
+  initial-value: black;
 }
 @property --marker-green {
   syntax: "<color>";
@@ -45,9 +45,9 @@ footer {
 	border-top: 2px dotted #b4b4b4;
 	margin: auto;
 }
-@media only screen and (min-width: 840px) {
+@media only screen and (min-width: 780px) {
 	main,footer,.inheader {
-		max-width: 840px;
+		max-width: 780px;
 	}
 }
 
@@ -56,12 +56,12 @@ footer {
 * ---------------------------------- */
 
 .inheader {
-	min-height: 70px;
 	display: flex;
 	column-gap: 1em;
 	align-items: center;
 	margin: auto;
 	flex-wrap: wrap;
+	margin-block: 8px;
 }
 .menu {
 	display: inline-flex;
@@ -81,7 +81,7 @@ footer {
 }
 footer .contact {
 	padding-inline: 0;
-	margin-block: 20px 4px;
+	margin-block: 8px 4px;
 }
 footer .contact li {
 	display: inline;
@@ -100,12 +100,12 @@ footer .contact li {
 .content {
 	line-height: 1.7;
 }
-@media only screen and (min-width: 840px) {
+@media only screen and (min-width: 780px) {
 	.article {
 		display: grid;
-		grid-template-areas: "h h" "c s";
-		grid-template-columns: 600px 1fr;
 		column-gap: 40px;
+		grid-template-areas: "h h" "c s";
+		grid-template-columns: 540px 240px;
 	}
 	.heading {
 		grid-area: h;
@@ -145,14 +145,21 @@ footer .contact li {
 .pagenav {
 	list-style: none;
 	padding-inline: 0;
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
+	gap: 8px;
 }
 .pagenavitem {
 	margin: .67em 0;
+	border: 1px dotted #555;
+	border-radius: 4px;
+	padding: 12px;
 }
 .pagenavtitle {
-	font-size: 1.3em;
+	font-weight: bold;
+	text-decoration: none;
+	line-height: 1;
 }
-
 /* ------------------------------------
 * General elements
 * ---------------------------------- */
@@ -198,7 +205,7 @@ header a,footer a,.toc a{
 
 /* Codeblock */
 pre {
-	padding: 24px;
+	padding: 12px;
 	overflow: scroll;
 	background: #f7f7f7;
 	border: 2px solid #e3e3e3;
@@ -215,16 +222,21 @@ p>code {
 * ---------------------------------- */
 
 .callout {
-	padding: 32px;
+	padding: 1em;
 	background: rgb(245, 255, 241);
 	border: 2px solid #8cce5f;
+	text-align: justify;
 }
 .callout>ul{
 	padding-inline: 20px;
+	margin-block: 0;
+}
+.callout>p {
+	margin-block: 0;
 }
 .callout-heading {
 	margin-block: 0;
-	font-size: 1.2em;
+	font-size: 1.1em;
 	font-weight: bold;
 }
 
