--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@
 @property --pen-regular {
   syntax: "<color>";
   inherits: true;
-  initial-value: black;
+  initial-value: rgb(42,42,42);
 }
 @property --marker-green {
   syntax: "<color>";
@@ -23,30 +23,42 @@
   inherits: true;
   initial-value: rgb(255, 185, 163);
 }
+@property --marker-blue {
+  syntax: "<color>";
+  inherits: true;
+  initial-value: rgb(99, 204, 255);
+}
 
 /* ------------------------------------
 * Page-wise
 * ---------------------------------- */
-
 body {
 	color: var(--pen-regular);
+	margin: 0;
 }
 
 header {
-	border-bottom: 1px solid #eee;
+	position: sticky;
+	top: 0;
+	padding: 4px;
+	z-index:1;
 }
 
 main {
-	margin: auto;
-	margin-block: 100px 20px;
+	margin: 50px auto 20px;
 }
 
 footer {
-	border-top: 2px dotted #b4b4b4;
 	margin: auto;
 }
+
+@media only screen and (max-width: 780px) {
+	header {
+		background: white;
+	}
+}
 @media only screen and (min-width: 780px) {
-	main,footer,.inheader {
+	main,footer {
 		max-width: 780px;
 	}
 }
@@ -55,14 +67,6 @@ footer {
 * Within header
 * ---------------------------------- */
 
-.inheader {
-	display: flex;
-	column-gap: 1em;
-	align-items: center;
-	margin: auto;
-	flex-wrap: wrap;
-	margin-block: 8px;
-}
 .menu {
 	display: inline-flex;
 	list-style: none;
@@ -79,14 +83,6 @@ footer {
 footer {
 	font-size: .9em;
 }
-footer .contact {
-	padding-inline: 0;
-	margin-block: 8px 4px;
-}
-footer .contact li {
-	display: inline;
-	margin: 0 5px 0 0;
-}
 
 /* ------------------------------------
 * Within main
@@ -98,7 +94,7 @@ footer .contact li {
 	margin-block: 0 .67em;
 }
 .content {
-	line-height: 1.7;
+	line-height: 1.6;
 }
 @media only screen and (min-width: 780px) {
 	.article {
@@ -146,19 +142,46 @@ footer .contact li {
 	list-style: none;
 	padding-inline: 0;
 	display: grid;
-	grid-template-columns: 1fr 1fr 1fr;
+	grid-template-columns: auto;
 	gap: 8px;
+	@media only screen and (min-width: 320px) {
+		grid-template-columns: repeat(2,1fr);
+	}
+	@media only screen and (min-width: 800px) {
+		grid-template-columns: repeat(3,1fr);
+	}
 }
 .pagenavitem {
-	margin: .67em 0;
-	border: 1px dotted #555;
-	border-radius: 4px;
+	border: 3px dotted var(--marker-pink);
 	padding: 12px;
+	line-height: 1;
+	display: flex;
+	flex-direction: column;
+	min-height: 150px;
+	justify-content: space-between;
+}
+.pagenavitem p {
+	margin-block: 0 .3em;
+}
+.pagenavitem a{
+	text-decoration: none;
+}
+.pagenavitem img {
+	float: left;
+	max-width: 100px;
+	margin-right: 12px;
 }
 .pagenavtitle {
+	margin: .67em 0;
+	font-size: 1.3em;
 	font-weight: bold;
 	text-decoration: none;
 	line-height: 1;
+}
+.pagenavdesc {
+	font-size: .9em;
+	color: #555;
+	line-height: 1.2;
 }
 /* ------------------------------------
 * General elements
