--- a/layouts/partials/fonts.html
+++ b/layouts/partials/fonts.html
@@ -2,11 +2,17 @@
 {{/*for fater resources deliveries*/}}
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Dosis:wght@500&family=Inconsolata:wght@200..900&display=swap" rel="stylesheet">
 <style>
 body {
 	font-family: Palatino, 'Palatino Linotype', 'URW Palladio L', 'P052', serif;
-	font-size: 1.1em;
+	font-size: 18px;
+}
+.homeref {
+	font-family: 'Dosis', sans-serif;
+  	font-optical-sizing: auto;
+	font-weight: 500;
+	font-size: 1.5em;
 }
 code {
 	font-family: 'Inconsolata', monospace;
