--- a/layouts/_markup/render-blockquote-alert.html
+++ b/layouts/_markup/render-blockquote-alert.html
@@ -3,7 +3,7 @@
     {{ with .AlertTitle }}
     {{ . }}
     {{ else }}
-    {{ ( or (i18n .AlertType) (title .AlertType) ) | upper }}
+    {{ ( or (i18n .AlertType) (title .AlertType) ) }}
     {{ end }}
   </p>
   {{ .Text }}
