--- a/layouts/home.html
+++ b/layouts/home.html
@@ -10,11 +10,14 @@
 	<li class=card>
 		<div>
 			<a class="cardtitle" href="{{ .RelPermalink }}">{{ .Title }}</a>
-			{{ if (lt .WordCount 50)}}
-			<div class="carddesc">{{ .Content }}</div>
-			{{ else }}
-			<div class="carddesc">{{ .Description }}</div>
-			{{ end }}
+			<div class="carddesc">
+				{{ if gt .WordCount 50 }}{{/*Extract the first paragraph*/}}
+				<p>{{ ( index (split .RawContent "\n\n" ) 0 ) | markdownify | truncate 200 }}</p>
+				<a class=more href="{{ .RelPermalink }}">More</a>
+				{{ else }}{{/* Display complete contents for short pages*/}}
+				{{ .Content }}
+				{{ end }}
+			</div>
 		</div>
 	</li>
 	{{ end }}
