--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -178,15 +178,14 @@ footer {
 	justify-content: space-between;
 }
 .contacts {
-	font-size: 13px;
-	display: inline-flex;
 	list-style: none;
 	padding-inline: 0;
 	flex-wrap: wrap;
+	font-size: .9em;
+	margin-top: 8px;
 }
 .contact {
 	display:inline;
-	margin-right:5px;
 }
 .more:after {
 	content: '\00BB';
@@ -234,6 +233,10 @@ header a,footer a,.toc a{
 	color: inherit;
 	text-decoration: none;
 }
+a.icon {
+	text-decoration: none;
+	background: none;
+}
 
 /* Codeblock */
 pre {
@@ -243,7 +246,6 @@ pre {
 	border: 2px solid #e3e3e3;
 }
 code {
-	font-size: .9em;
 	color: black;
 }
 p>code {
