--- a/layouts/partials/fonts.html
+++ b/layouts/partials/fonts.html
@@ -2,7 +2,7 @@
 {{/*for fater resources deliveries*/}}
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Dosis:wght@500&family=Inconsolata:wght@200..900&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Dosis:wght@500&display=swap" rel="stylesheet">
 <style>
 body {
 	font-family: Palatino, 'Palatino Linotype', 'URW Palladio L', 'P052', serif;
@@ -15,6 +15,7 @@ body {
 	font-size: 1.5em;
 }
 code {
-	font-family: 'Inconsolata', monospace;
+	font-family: 'Adwaita Mono', monospace;
+	font-size: 13px;
 }
 </style>
