--- a/layouts/single.html
+++ b/layouts/single.html
@@ -21,7 +21,7 @@
 {{ with .TableOfContents }}
 {{ if ne . $noToc }}
 <div class="toc">
-    <h2 class="toclabel">Table of Contents</h2>
+    <h2 class="heading">Table of Contents</h2>
     {{ . }}
 </div>
 {{ end }}
