--- a/layouts/baseof.html
+++ b/layouts/baseof.html
@@ -15,18 +15,21 @@
 </html>
 
 {{ define "header" }}
-<a class="homeref" href="/">{{ site.Title }}</a></div>
 {{ end }}
 
 {{ define "footer" }}
-{{ .Site.Copyright }}
+<div>{{ .Site.Copyright }} | <a class=homeref href="/">{{ site.Params.home }}</a></div>
 {{ end }}
 
 {{ define "main" }}
 <article class="article">
+<div class="articleheading">
 <h1 class="heading">{{ .Title }}</h1>
+</div>
 <aside class="articleside">
+	<div class="sticky">
 	{{ block "toc" . }} {{ end }}
+	</div>
 </aside>
 <div class="content">
 {{ .Content }}
