--- a/layouts/partials/fonts.html
+++ b/layouts/partials/fonts.html
@@ -1,21 +1,19 @@
 {{/*Establish early connection(s) with the third-party origin*/}}
-{{/*for fater resources deliveries*/}}
+{{/*for faster resources deliveries*/}}
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Dosis:wght@500&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Cantarell:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:ital,wght@0,600;0,700;1,600;1,700&display=swap" rel="stylesheet">
 <style>
 body {
-	font-family: Palatino, 'Palatino Linotype', 'URW Palladio L', 'P052', serif;
-	font-size: 18px;
+	font-family: 'Cantarell', sans-serif;
+	word-spacing: 1px;
+	letter-spacing: -.7px;
 }
-.homeref {
-	font-family: 'Dosis', sans-serif;
-  	font-optical-sizing: auto;
-	font-weight: 500;
-	font-size: 1.5em;
+.heading,h1,h2,h3,h4,h5,h6 {
+	font-family: 'Poppins', sans-serif;
 }
 code {
 	font-family: 'Adwaita Mono', monospace;
-	font-size: 13px;
+	font-size: .8em;
 }
 </style>
